--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -4,10 +4,18 @@
 }}
 
 <main>
-	{{>heading title="Index" info=data.test}}
+	<h1 id="locations">Hello world</h1>
+	<h1 id="locations">Hello world</h1>
+	Test
 </main>
 
+<h1 class="title big">Test</h1>
+<h2 class="big">Test</h2>
+<p> </p>
+
 {{!
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
-}}
+Цей код містить лише те, що буде виводитись в
+
+<body>
+	Адже наш layout/default.hbs має вже структуру HTML
+	}}
